power: Monitor org.freedesktop.UPower.KbdBacklight.BrightnessChangedWithSource signal

Monitor org.freedesktop.UPower.KbdBacklight.BrightnessChangedWithSource signal.
Along with kernel[1] and upower[2] changes, this will make the slider in the
Power Settings panel respond to brightness changes caused by pressing
backlight buttons that change the brightness directly.

[1] https://patchwork.kernel.org/patch/9544111/
[2] https://bugs.freedesktop.org/show_bug.cgi?id=98404

https://bugzilla.gnome.org/show_bug.cgi?id=773403